--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,9 +48,11 @@
             <br>
             Password: <input type="password" name="password" required minlength="6">
             <br>
-            Name: <input type="text" name="userName" required>
+            Name: <input type="text" name="firstName" required>
             <br>
-            Surname: <input type="text" name="userSurname" required >
+            Surname: <input type="text" name="lastName" required >
+            <br>
+            Address: <input type="text" name="address" required>
             <br>
             City: <input type="text" name="addrCity" required>
             <br>
