--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -269,57 +269,58 @@
 
     <!-- SHOPPINC CART -->
     <div id="shopping-cart-div">
-        <table  class="styled-table" style="width:100%">
-            <caption style="lighting-color: #04aa6d">CART</caption>
-            <thead>
-            <tr>
-                <th colspan="2" scope="col">Product name</th>
-                <th scope="col">Product Description</th>
-                <th scope="col">Category</th>
-                <th scope="col">Cost</th>
-                <th scope="col">How many</th>
-            </tr>
-            </thead>
-            <tbody th:each="supplierId : ${session.shoppingCart.shoppingCartMap.keySet()}" th:with="supplierInfo=${session.shoppingCart.shoppingCartMap.get(supplierId)[0].supplier}" >
+        <div id="shopping-cart-div-message"> Prodotto aggiunto nel carrello con successo</div>
+            <table  class="styled-table" style="width:100%">
+                <caption style="lighting-color: #04aa6d">CART</caption>
+                <thead>
+                <tr>
+                    <th colspan="2" scope="col">Product name</th>
+                    <th scope="col">Product Description</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Cost</th>
+                    <th scope="col">How many</th>
+                </tr>
+                </thead>
+                <tbody th:each="supplierId : ${session.shoppingCart.shoppingCartMap.keySet()}" th:with="supplierInfo=${session.shoppingCart.shoppingCartMap.get(supplierId)[0].supplier}" >
 
-            <tr th:each="product : ${session.shoppingCart.shoppingCartMap.get(supplierId)}" >
-                <td class="table-product-img">
-                    <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${product.productImagePath}" alt="Product image" src="./images/prod-ex.jpeg"/>
-                </td>
-                <td th:text="${product.productName}">Prod1</td>
-                <td th:text="${product.productDescription}">Desc1</td>
-                <td th:text="${product.productCategory}">Cat1</td>
-                <td>&euro; <span th:text="${#numbers.formatDecimal(product.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
-                <td th:text="${product.howMany}">5</td>
-            </tr>
-            <tr class="active-row" th:with="totalamount=${session.shoppingCart.totalAmountBySupplier.get(supplierId)}">
+                <tr th:each="product : ${session.shoppingCart.shoppingCartMap.get(supplierId)}" >
+                    <td class="table-product-img">
+                        <img th:src="'https://tiw21marketplace.s3.eu-south-1.amazonaws.com/images/products/'+ ${product.productImagePath}" alt="Product image" src="./images/prod-ex.jpeg"/>
+                    </td>
+                    <td th:text="${product.productName}">Prod1</td>
+                    <td th:text="${product.productDescription}">Desc1</td>
+                    <td th:text="${product.productCategory}">Cat1</td>
+                    <td>&euro; <span th:text="${#numbers.formatDecimal(product.supplierProductCost, 1, 2, 'COMMA')}">10.00</span> </td>
+                    <td th:text="${product.howMany}">5</td>
+                </tr>
+                <tr class="active-row" th:with="totalamount=${session.shoppingCart.totalAmountBySupplier.get(supplierId)}">
 
-                <td>Total amount on <span th:text="${supplierInfo.supplierName}">Suppl1</span> &euro; <span th:text="${#numbers.formatDecimal(totalamount, 1, 2, 'COMMA')}">10.00</span></td>
+                    <td>Total amount on <span th:text="${supplierInfo.supplierName}">Suppl1</span> &euro; <span th:text="${#numbers.formatDecimal(totalamount, 1, 2, 'COMMA')}">10.00</span></td>
 
-                <td th:if="${ !supplierInfo.hasFreeShipping }"> <span th:text=" ${supplierInfo.supplierName}">Suppl1</span> doesn't offer free shipping </td>
+                    <td th:if="${ !supplierInfo.hasFreeShipping }"> <span th:text=" ${supplierInfo.supplierName}">Suppl1</span> doesn't offer free shipping </td>
 
-                <td th:if="${ totalamount < supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}">Free shipping on<span th:text="${supplierInfo.supplierName}">Suppl1</span>: &euro;<span th:text="${#numbers.formatDecimal(supplierInfo.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span></td>
+                    <td th:if="${ totalamount < supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}">Free shipping on<span th:text="${supplierInfo.supplierName}">Suppl1</span>: &euro;<span th:text="${#numbers.formatDecimal(supplierInfo.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span></td>
 
-                <td th:if="${ totalamount >= supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}" th:text="'You\'re getting free shipping'"> Spesa minima per spedizione gratuita </td>
-                <td>
-                    <form  th:action="${#request.contextPath} + '/PlaceOrder'" method="POST">
-                        <label th:for="addreesId">Select an address
-                            <select th:name="userShippingAddressId">
-                                <option th:each="address : ${shoppingAddresses}" th:value="${address.shippingAddressId}"
-                                        th:text="${address.recipient} + ' ' + ${address.address} +  ' ' + ${address.city} +  ' ' + ${address.state} +  ' ' + ${address.phone}"
-                                        th:selected="${address.shippingAddressId == 1}">
-                                </option>
-                            </select>
-                        </label>
-                        <input type="hidden"  name="supplierId" th:value="${supplierId}" >
-                        <input type="submit" class="clickable-link clickable-link-large" value="Place order">
-                    </form>
-                </td>
-            </tr>
+                    <td th:if="${ totalamount >= supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}" th:text="'You\'re getting free shipping'"> Spesa minima per spedizione gratuita </td>
+                    <td>
+                        <form  th:action="${#request.contextPath} + '/PlaceOrder'" method="POST">
+                            <label th:for="addreesId">Select an address
+                                <select th:name="userShippingAddressId">
+                                    <option th:each="address : ${shoppingAddresses}" th:value="${address.shippingAddressId}"
+                                            th:text="${address.recipient} + ' ' + ${address.address} +  ' ' + ${address.city} +  ' ' + ${address.state} +  ' ' + ${address.phone}"
+                                            th:selected="${address.shippingAddressId == 1}">
+                                    </option>
+                                </select>
+                            </label>
+                            <input type="hidden"  name="supplierId" th:value="${supplierId}" >
+                            <input type="submit" class="clickable-link clickable-link-large" value="Place order">
+                        </form>
+                    </td>
+                </tr>
 
 
-            </tbody>
-        </table>
+                </tbody>
+            </table>
     </div>
 
 
