ShoppingCartNew to be completed

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -71,7 +71,7 @@
 
 
     <!-- SHOPPINC CART -->
-    <div id="shopping-cart-div">
+    <div id="shopping-cart-div" style="display: block">
             <table  class="styled-table" style="width:100%">
                 <caption style="lighting-color: #04aa6d">CART</caption>
                 <thead>
