Shopping cart working properly

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -67,11 +67,12 @@
             </tr>
             </thead>
         </table>
+        <div id="products-table-error-div" style="display: none"> </div>
     </div>
 
 
     <!-- SHOPPINC CART -->
-    <div id="shopping-cart-div-old" style="display: block">
+    <div id="shopping-cart-div-old" style="display: none">
         <table class="styled-table" style="width:100%">
             <caption style="lighting-color: #04aa6d">CART</caption>
             <thead>
